fix/suppress a lot more warnings