@@ -270,6 +270,7 @@ public final class Parser {
                     SpecificVarInfo ubVar = defineInternal("$upperBound$");
                     Node step;
                     SpecificVarInfo stepVar;
+                    //noinspection IfStatementWithIdenticalBranches
                     if (ltok == COMMA) {
                         scan();
                         // step
@@ -290,7 +291,7 @@ public final class Parser {
                     check(END);
 
                     // we need to move the value of the internal iterator to the actual local iterator variable
-                    innerStats.add(0, new AssignmentNode(bpos, new Node[]{new LocalAccessNode(cvarPos, controlVar)},
+                    innerStats.addFirst(new AssignmentNode(bpos, new Node[]{new LocalAccessNode(cvarPos, controlVar)},
                             new Node[]{new LocalAccessNode(setupPos, internalControlVar)}));
                     // we add the for-step to the end of the internal statements
                     // the step might break the loop if an integer addition over/under-flows and must therefore close stuff in that case
@@ -460,12 +461,8 @@ public final class Parser {
         loop:
         for (; ; ) {
             switch (ltok) {
-                case LBRAK, DOT -> {
-                    result = DeRef(result);
-                }
-                case COLON, LPAR, LITERAL_STRING, LBRAC -> {
-                    result = FuncCall(result);
-                }
+                case LBRAK, DOT -> result = DeRef(result);
+                case COLON, LPAR, LITERAL_STRING, LBRAC -> result = FuncCall(result);
                 default -> {
                     break loop;
                 }
@@ -527,12 +524,8 @@ public final class Parser {
         loop:
         for (; ; ) {
             switch (ltok) {
-                case LBRAK, DOT -> {
-                    result = DeRef(result);
-                }
-                case COLON, LPAR, LITERAL_STRING, LBRAC -> {
-                    result = FuncCall(result);
-                }
+                case LBRAK, DOT -> result = DeRef(result);
+                case COLON, LPAR, LITERAL_STRING, LBRAC -> result = FuncCall(result);
                 default -> {
                     break loop;
                 }
@@ -841,11 +834,11 @@ public final class Parser {
             ps = new ArrayList<>();
         }
         if (selfPlaceholder != null) {
-            ps.add(0, selfPlaceholder);
+            ps.addFirst(selfPlaceholder);
         }
         check(RPAR);
         Position _pos = la.pos();
-        boolean hasParamsArg = !ps.isEmpty() && ps.get(ps.size() - 1).type() == TDOT;
+        boolean hasParamsArg = !ps.isEmpty() && ps.getLast().type() == TDOT;
         symTab.enterFunctionScope(hasParamsArg);
         SpecificVarInfo[] args = ps.stream().map(p -> define(p, 0)).toArray(SpecificVarInfo[]::new);
         var innerStats = Block();
